# JZip

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
header/: CharHeap.h  HuffmanTree.h  Interpreter.h
scripts/: cleanWorking.sh
src/: CharHeap.cpp  HuffmanTree.cpp  Interpreter.cpp  main.cpp
working/: .gitignore  bee.txt  bee.txt.jzip
